--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^11.15.0",
+    "leva": "^0.9.35",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
